layout bug fixed

--- a/src/components/DeletePost/DeletePost.css
+++ b/src/components/DeletePost/DeletePost.css
@@ -4,5 +4,5 @@
     background-color: transparent;
     position: absolute;
     right: 0;
-    top: 12px;
+    top: 17px;
 }
